--- a/src/optimization_graphing.ipynb
+++ b/src/optimization_graphing.ipynb
@@ -38,7 +38,7 @@
     "    all_files = os.listdir(directory)\n",
     "    for subsample_proportion in subsample_proportions:\n",
     "        for file in all_files:\n",
-    "            if (f\"sub{subsample_proportion}\" in file):\n",
+    "            if (f\"sub{subsample_proportion}_\" in file):\n",
     "                files[subsample_proportion].append(directory + file)\n",
     "    return files\n"
    ]
